--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,3 +68,19 @@ section {
   @apply px-container;
 }
 
+.animate-slide-up {
+  animation: slideUp 0.5s ease-in-out;
+}
+
+@keyframes slideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
